--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
     box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Una sombra suave */
     border-radius: 8px; /* Bordes redondeados */
     overflow: hidden; /* Asegura que nada se salga de los bordes redondeados */
+	
+	display: flex;
+    flex-direction: column; /* Apila los elementos en vertical */
+    min-height: 100vh;     /* Altura mínima = 100% de la altura de la pantalla */
+	
+	
 }
 
 /* --- ESTILOS DE LA CABECERA --- */
@@ -703,16 +709,18 @@ body {
 
 /* --- Estilos CORREGIDOS para el pie de página de Ajustes --- */
 .settings-footer {
-    padding: 8px;
+    padding: 15px;
 	padding-bottom: 8px;
     border-top: 1px solid #f0f0f0;
-    margin-top: 0px;
+   
     /* Propiedades para centrar todo en horizontal */
     display: flex;
     flex-direction: row; /* <-- Cambiamos a 'row' (fila) */
     justify-content: center;
     align-items: center;
     gap: 10px;
+	
+	margin-top: auto; /* <-- ¡ESTA ES LA LÍNEA MÁGICA! */
 }
 
 .footer-text {
@@ -1404,11 +1412,11 @@ input:checked + .slider:before {
 /* --- DISEÑO FINAL PANTALLA DE AJUSTES --- */
 /* =============================================================== */
 
-/* 1. La pantalla completa de "Ajustes" */
+ 1. La pantalla completa de "Ajustes" 
 #settings-view {
     display: flex;
-    flex-direction: column; /* Apila: cabecera, contenido, pie de página */
-    min-height: 100vh;      /* Ocupa, como mínimo, toda la altura de la pantalla */
+    flex-direction: column; 
+    min-height: 100vh;      
 	
 }
 
