--- a/style.css
+++ b/style.css
@@ -1721,3 +1721,83 @@ input:checked + .slider:before {
     align-items: center;
     padding-left: 0; /* <-- AÑADE ESTA LÍNEA */
 }
+
+
+
+
+
+
+.assign-shifts-button {
+    flex-grow: 1;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: white;
+    text-align: left;
+    cursor: pointer;
+}
+
+
+
+/* --- Estilos para la Mini-Ventana de Asignar Turnos --- */
+
+#multi-shift-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.multi-shift-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+
+.multi-shift-item label {
+    flex-grow: 1;
+    margin-left: 10px;
+}
+
+.multi-shift-item input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+}
+
+
+
+
+
+
+
+/* --- Estilo para el Aviso de Nueva Función --- */
+    .feature-notice {
+        background-color: #eaf4ff; /* Azul claro */
+        border: 1px solid #cce1ff;
+        border-radius: 8px;
+        padding: 15px;
+        margin: 0 20px 20px 20px; /* Espaciado */
+    }
+
+    .feature-notice p {
+        margin: 0;
+        font-size: 0.9em;
+        text-align: center;
+        color: #334;
+        line-height: 1.5;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
